# lox-interpreter

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  cpplox  error.h  grammar.md  grammar.txt  lexer.cpp  lexer.h  main.cpp  token.h  tokentypes.h  types.h
.cache/clangd/index/: astPrinter.cpp.F894C59E5259015F.idx  astPrinter.h.0C3747C8D5A5BDE1.idx  error.h.C55AB7E2FF8D6319.idx  interpreter.h.4FFE1D2D24CD836B.idx  interpretor.cpp.558438A35522BAE8.idx  lexer.cpp.39F8F3ABFE9B5523.idx  lexer.h.060A525B76665CE9.idx  main.cpp.B0451809656B6B55.idx  parser.h.0B97FA0672AE43EA.idx  parser_ast_tests.cpp.C0F836D4C11E22FE.idx  token.h.EFE35FF7C6EFB5F4.idx  tokentypes.h.2F2FC9A87B76C889.idx  trees.h.D64240D6FF9BE054.idx  types.h.C25DDD1C4C28EAFC.idx
ast/: CMakeLists.txt  astPrinter.cpp  astPrinter.h  expressionTrees.h  statementTrees.h  test_ast.cpp  trees.h
error/: CMakeLists.txt  error.h
interpreter/: CMakeLists.txt  interpreter.h  interpretor.cpp
lexer/: CMakeLists.txt  lexer.cpp  lexer.h
parser/: CMakeLists.txt  parser.h
scripts/: ast_generator.py
typing/: CMakeLists.txt  token.h  tokentypes.h
